fix: removed options-endpoint from upload and download controller + updated openapi.json
